@@ -1,7 +1,0 @@
-<HTML><HEAD></HEAD>
-<BODY  text="#000000" link="#0000FF" bgcolor="#ffffff" vlink="#0000FF" alink="#FF0000">
-<P>
-<H1>Wrong URL</H1>
-
-Please, go <A href="##CORRECTURL##">here...</A> instead.
-</BODY>
