@@ -1,5 +1,5 @@
 # Gedafe, the Generic Database Frontend
-# copyright (c) 2000, ETH Zurich
+# copyright (c) 2000,2001 ETH Zurich
 # see http://isg.ee.ethz.ch/tools/gedafe
 
 # released under the GNU General Public License
@@ -136,7 +136,7 @@ sub GetUnique($)
 {
 	my $s = shift;
 	my $socket = ConnectToTicketsDaemon($s);
-	print $socket "SITE $g{conf}{app_site} $g{conf}{app_path}\n";
+	print $socket "SITE $s->{url}\n";
 	<$socket>;
 	print $socket "GETUNIQUE\n";
 	$_ = <$socket>;
@@ -153,7 +153,7 @@ sub DropUnique($$)
 	my $unique_id = shift;
 	if(defined $unique_id) {
 		my $socket = ConnectToTicketsDaemon($s);
-		print $socket "SITE $g{conf}{app_site} $g{conf}{app_path}\n";
+		print $socket "SITE $s->{url}\n";
 		<$socket>;
 		print $socket "DROPUNIQUE $unique_id\n";
 		$_ = <$socket>;
